welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: not found: value d
	d=a%10;
        ^lastDigit:3: error: not found: value e
	e=b%10;
        ^lastDigit:4: error: not found: value f
	f=c%10;
        ^lastDigit:5: error: not found: value d
	if(d==e || e==f || f==d){
           ^