welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
	d=a%10;
	e=b%10;
	f=c%10;
	if(d==e || e==f || f==d){
		return true
	}else return false
}
